[feat]画了登录界面和个人资料界面的UI

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">驿站</string>
-    <string name="Homepage">首页</string>
-    <string name="Friend">好友</string>
-    <string name="Me">我的</string>
+    <string name="homepage">首页</string>
+    <string name="friend">好友</string>
+    <string name="me">我的</string>
+    <string name="login_userid">邮箱/手机</string>
+    <string name="login_password">密码</string>
+    <string name="login">登录</string>
 </resources>
